web: fix slider spacing

--- a/web/src/sections/project/components/related-article-slider/related-article-slider.css
+++ b/web/src/sections/project/components/related-article-slider/related-article-slider.css
@@ -1,3 +1,7 @@
+.relatedArticleSlider {
+  @apply mt-4;
+}
+
 .flickity-button {
   background: none;
   width: 2rem;
